- Added release notes

--- a/Waiter/views/admin/admin-tabs.twig
+++ b/Waiter/views/admin/admin-tabs.twig
@@ -7,6 +7,7 @@
             <a href="?page=vacation-soup-admin&tab=owner" class="nav-tab{{ (tab=='owner') ? ' nav-tab-active' }}">Owner</a>
             <a href="?page=vacation-soup-admin&tab=property" class="nav-tab{{ (tab=='property') ? ' nav-tab-active' }}">Property</a>
             <a href="?page=vacation-soup-admin&tab=connect" class="nav-tab{{ (tab=='connect') ? ' nav-tab-active' }}">Connect</a>
+            <a href="?page=vacation-soup-admin&tab=release" class="nav-tab{{ (tab=='release') ? ' nav-tab-active' }}">Release Note</a>
         </h2>
     </div>
     <div class="soup-logo col-sm-4">
