- Added loading.svg to release notes

--- a/Waiter/views/admin/release.twig
+++ b/Waiter/views/admin/release.twig
@@ -6,7 +6,7 @@
             <div class="vs-content tab-dash row">
                 <div class="col-lg-8 col-sm-12">
                     <div class="vs-panel row">
-                        <div id="title" class="col-sm-12">
+                        <div id="title" class="col-sm-12 checking">
                             <h1>Waiter 1.0.16 Release Notes</h1>
                             <iframe src="https://vacationsoup.com/waiter-1-0-16/"></iframe>
                         </div>
