--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -195,7 +195,7 @@ DIV.media-selector {
     width: 100%;
 }
 #scheduler INPUT.button-large {
-    width: 100px;
+    width: 100%;
     display: block;
     clear: left;
     margin: 5px 20px 10px 0;
