--- a/Waiter/views/admin/form.twig
+++ b/Waiter/views/admin/form.twig
@@ -1,7 +1,7 @@
 <script>
-    var unloading = false;
+    document.unloading = false;
     jQuery(window).unload(function(){
-        unloading = true;
+        document.unloading = true;
     });
 
     jQuery(function() {
@@ -53,12 +53,12 @@
 
             jQuery.ajax(ajaxCall)
                 .fail(function(jqXHR,status,error) {
-                    if (unloading) return;
+                    if (document.unloading) return;
                     console.log('fail (vacation-soup) '+status+' '+error);
                     alert('Error: Could not save change, refreshing page may help\n'+status);
                 })
                 .done(function(response) {
-                    if (unloading) return;
+                    if (document.unloading) return;
                     var msg = 'Not connected to Kitchen';
                     this.disabled=false;
                     if (!response || response.error && !jQuery(this).hasClass('quiet')) {
@@ -69,7 +69,7 @@
                     }
                 })
                 .always(function(response){
-                    if (unloading) return;
+                    if (document.unloading) return;
                     jQuery(this).removeClass('required');
                     var thenDo = jQuery(this).data('persist-action');
                     if (thenDo){
