--- a/Waiter/views/admin/tease-post.twig
+++ b/Waiter/views/admin/tease-post.twig
@@ -13,9 +13,15 @@
         <div id="edit_recent" onclick='autosaveRedirect = "?page=vacation-soup-admin&tab=create&p={{ post.ID }}";doAutosave();' title="Edit"><i class="dismiss fa fa-edit"></i></div>
         <a href="{{ fn('get_home_url') }}?p={{ post.ID }}&preview=true" target="_blank" title="Preview local" id="preview_local"><i class="dismiss fa fa-eye"></i></a>
         {% set kitchen_url = fn('get_post_meta',post.ID,'kitchen_url',1) %}
+        {% set conceal = fn('get_post_meta',post.ID,'conceal',1) %}
         {% if kitchen_url %}
-        <a href="{{ kitchen_url }}" target="_blank" title="View in Soup" id="preview_remote"><i class="dismiss fa fa-eye"></i></a>
+            <a href="{{ kitchen_url }}" target="_blank" title="View in Soup" id="preview_remote"><i class="dismiss fa fa-eye"></i></a>
         {% endif %}
+        {% if conceal %}
+            <a href="#" title="Concealed from Soup" id="conceal">
+                <i class="dismiss fa fa-eye"></i>
+                <i class="fa fa-ban fa-stack-2x error"></i>
+            </a>        {% endif %}
     </div>
     <div class="col-xl-8 col-lg-12 col-sm-8">
         <h4 class="h2">
