--- a/Waiter/views/admin/form.twig
+++ b/Waiter/views/admin/form.twig
@@ -1,7 +1,21 @@
 <script>
-    document.unloading = false;
-    jQuery(window).unload(function(){
-        document.unloading = true;
+
+    jQuery(function(){
+        document.unloading = false;
+        jQuery(window).unload(function(){
+            document.unloading = true;
+        });
+
+        jQuery('FORM').on('submit',function(e){
+            // Prevent form submit if fields are already submitted
+            var busy = jQuery(this).attr('submitting');
+            if (busy){
+                e.preventDefault();
+                e.cancelBubble = true;
+                return false;
+            }
+            return true;
+        });
     });
 
     jQuery(function() {
@@ -9,6 +23,14 @@
             var ajaxCall;
             var jElem = jQuery(this);
             this.disabled=true;
+            jQuery('INPUT[type=submit]').prop('disabled',true);
+
+            var form = jElem.closest('form');
+            var busy = form.attr('submitting');
+            if (!busy) {
+                busy = 0;
+            }
+            form.attr('submitting',busy+1);
 
             var value = jElem.val();
             if ('checkbox'===this.type){
@@ -60,7 +82,12 @@
                 .done(function(response) {
                     if (document.unloading) return;
                     var msg = 'Not connected to Kitchen';
-                    this.disabled=false;
+                    var $this = jQuery(this);
+                    $this.attr('disabled',false);
+                    var form = $this.closest('form');
+                    var busy = form.attr('submitting');
+                    form.attr('submitting',busy-1);
+
                     if (!response || response.error && !jQuery(this).hasClass('quiet')) {
                         if (response && response.error) {
                             msg = response.error.message;
@@ -71,6 +98,7 @@
                 .always(function(response){
                     if (document.unloading) return;
                     jQuery(this).removeClass('required');
+                    jQuery('INPUT[type=submit]').prop('disabled',false);
                     var thenDo = jQuery(this).data('persist-action');
                     if (thenDo){
                         eval(thenDo);
