--- a/Waiter/views/admin/tease-post.twig
+++ b/Waiter/views/admin/tease-post.twig
@@ -10,18 +10,29 @@
         {% else %}
             <img src="{{ soup.image_url }}/placeholder-square.jpg"/>
         {% endif %}
-        <div id="edit_recent" onclick='autosaveRedirect = "?page=vacation-soup-admin&tab=create&p={{ post.ID }}";doAutosave();' title="Edit"><i class="dismiss fa fa-edit"></i></div>
-        <a href="{{ fn('get_home_url') }}?p={{ post.ID }}&preview=true" target="_blank" title="Preview local" id="preview_local"><i class="dismiss fa fa-eye"></i></a>
-        {% set kitchen_url = fn('get_post_meta',post.ID,'kitchen_url',1) %}
-        {% set conceal = fn('get_post_meta',post.ID,'conceal',1) %}
-        {% if kitchen_url %}
-            <a href="{{ kitchen_url }}" target="_blank" title="View in Soup" id="preview_remote"><i class="dismiss fa fa-eye"></i></a>
-        {% endif %}
-        {% if conceal %}
-            <a href="#" title="Concealed from Soup" id="conceal">
-                <i class="dismiss fa fa-eye"></i>
-                <i class="fa fa-ban fa-stack-2x error"></i>
-            </a>        {% endif %}
+        <div class="deface-container">
+
+            <div id="edit_recent" class="deface left" onclick='autosaveRedirect = "?page=vacation-soup-admin&tab=create&p={{ post.ID }}";doAutosave();' title="Edit">
+                <i class="dismiss fa fa-edit"></i>
+            </div>
+            <div class="deface centre">
+                {% set kitchen_url = fn('get_post_meta',post.ID,'kitchen_url',1) %}
+                {% set conceal = fn('get_post_meta',post.ID,'conceal',1) %}
+                {% if conceal %}
+                    <a href="#" title="Concealed from Soup" id="conceal">
+                        <i class="fa fa-ban error"></i>
+                    </a>
+                {% elseif kitchen_url %}
+                    <a href="{{ kitchen_url }}" target="_blank" title="View in Soup" id="preview_remote"><i class="dismiss fa fa-eye"></i></a>
+                {% endif %}
+            </div>
+            <div class="deface right">
+                <a href="{{ fn('get_home_url') }}?p={{ post.ID }}&preview=true" target="_blank" title="Preview local" id="preview_local">
+                    <i class="dismiss fa fa-eye"></i>
+                </a>
+            </div>
+
+        </div>
     </div>
     <div class="col-xl-8 col-lg-12 col-sm-8">
         <h4 class="h2">
