--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -569,6 +569,9 @@
     .notice { display: none; } /* Hide system notices, they will have already seen and ignored them */
     .notice.soup { display: block; } /* Show our notices */
 
+    .tease-post .deface a {
+        text-decoration: unset;
+    }
     .tease-post .deface I.fa {
         font-size: 1.2em;
         color: white;
@@ -605,7 +608,8 @@
     .tease-post .deface.right {
         float: right;
     }
-    .tease-post .deface.centre {
+    .tease-post .deface.centre I {
+        color: #f08237;
     }
 
 
