- Enabled multi-user posting

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -150,7 +150,7 @@
                     <label for="kitchen_user">
                         Username <span class="required">*</span>
                     </label>
-                    <input type="text" class="no-persist" name="SoupWaiter.kitchen_user" id="kitchen_user" autocomplete="vacationsoup.com" value="{{ soup.kitchen_user }}"/>
+                    <input type="text" class="no-persist" name="SoupWaiter.kitchen_user" id="kitchen_user" autocomplete="new-password" value="{{ soup.kitchen_user }}"/>
                 </div>
                 <div class="field required">
                     <label for="kitchen_password">
